# zephyr-rtos-ai

./: AGENTS.md  README.md  gemini-extension.json  poe.toml  pyproject.toml
.agents/skills/: zephyr-skill-creator
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.gemini/: settings.json
.gemini/commands/: new-skill.toml
.opencode/: oh-my-opencode.json  opencode.jsonc
agent-skills/zephyr-bluetooth-le/: SKILL.md
agent-skills/zephyr-bluetooth-le/references/: gap.md
agent-skills/zephyr-device-drivers/references/: driver-apis.md  driver-testing.md  examples.md  sensor-drivers.md
agent-skills/zephyr-devicetree/: SKILL.md
agent-skills/zephyr-devicetree/references/: advanced-bindings.md  advanced-macros.md  bindings.md  clocks.md  debugging.md  dma.md  examples.md  macros.md  overlays.md  pinctrl.md  syntax.md
agent-skills/zephyr-fs/: SKILL.md
agent-skills/zephyr-fs/references/: littlefs.md
agent-skills/zephyr-gpio/references/: GPIO_DEVICETREE_BINDINGS_SUMMARY.md  GPIO_PATTERNS_EXTRACTED.md  GPIO_QUICK_CHEAT_SHEET.md  devicetree.md
agent-skills/zephyr-i2c/references/: devicetree.md
agent-skills/zephyr-json/: SKILL.md
agent-skills/zephyr-json/references/: kconfig.md
agent-skills/zephyr-kconfig/: SKILL.md
agent-skills/zephyr-kconfig/references/: best_practices.md  debugging.md  functions.md  syntax.md
agent-skills/zephyr-kernel-datapassing/: SKILL.md
agent-skills/zephyr-kernel-datapassing/references/: api.md  comparison.md  data_passing.md  zbus.md
agent-skills/zephyr-kernel-synchronization/: SKILL.md
agent-skills/zephyr-kernel-synchronization/references/: comparison.md  condvar.md  events.md  locations.md  mutexes.md  semaphores.md
agent-skills/zephyr-memory/: SKILL.md
agent-skills/zephyr-memory/references/: api.md  domains.md  heaps.md  slabs.md  virtual.md
agent-skills/zephyr-net-socket/: SKILL.md
agent-skills/zephyr-net-socket/references/: kconfig.md
agent-skills/zephyr-netbuf/references/: api.md  fragmentation.md
agent-skills/zephyr-settings/: SKILL.md
agent-skills/zephyr-settings/references/: api_reference.md  backend_comparison.md  examples.md  troubleshooting.md
agent-skills/zephyr-shell-commands/: SKILL.md
agent-skills/zephyr-shell-commands/references/: advanced.md  api.md  debugging.md  macros.md
agent-skills/zephyr-smf/references/: patterns.md
agent-skills/zephyr-spi/references/: kconfig.md
agent-skills/zephyr-storage/: SKILL.md
agent-skills/zephyr-storage/references/: devicetree.md  zms.md
agent-skills/zephyr-testing/: SKILL.md
agent-skills/zephyr-testing/references/: examples.md  ztest.md
agent-skills/zephyr-uart/: SKILL.md
agent-skills/zephyr-uart/references/: async.md  devicetree.md  kconfig.md
agent-skills/zephyr-wifi/: SKILL.md
agent-skills/zephyr-wifi/references/: ap_mode.md  kconfig.md  power_save.md  sta_mode.md
internal/assets/extra-instructions/: zephyr-devicetree.txt  zephyr-kernel-datapassing.txt  zephyr-kernel-isr.txt  (+3 more)
internal/zephyr-skill-creator/: SKILL.md
skills/zephyr-bluetooth-le/: SKILL.md
skills/zephyr-cbor/: SKILL.md
skills/zephyr-device-drivers/: SKILL.md
skills/zephyr-devicetree/: SKILL.md
skills/zephyr-gpio/: SKILL.md
skills/zephyr-i2c/: SKILL.md
skills/zephyr-isr/: SKILL.md
skills/zephyr-json/: SKILL.md
skills/zephyr-kernel-datapassing/: SKILL.md
skills/zephyr-kernel-synchronization/: SKILL.md
skills/zephyr-net-socket/: SKILL.md
skills/zephyr-netbuf/: SKILL.md
skills/zephyr-settings/: SKILL.md
skills/zephyr-shell-commands/: SKILL.md
skills/zephyr-smf/: SKILL.md
skills/zephyr-spi/: SKILL.md
skills/zephyr-threading/: SKILL.md
src/zephyr_rtos_ai/: __main__.py  _locations.py  _types.py
zephyr-ws/: west.yml
zephyr-ws/.west/: config
(+75 files in other folders)
